2005-05-22  Michael Natterer  <mitch@gimp.org>

	* libgimpwidgets/Makefile.am: changed gimpwidgetsenums.c rule to
	include the bits for "desc" and "help" support.

	* libgimpwidgets/gimpwidgetsenums.h: added "desc" and "help"
	strings for the GimpColorSelectorChannel enum.

	* libgimpwidgets/gimpwidgetsenums.c: added to CVS because it
	contains translatable strings now.

	* libgimpwidgets/gimpwidgets.def: changed accordingly.

	* libgimpwidgets/gimpcolorscales.c
	* libgimpwidgets/gimpcolorselect.c: removed duplicated arrays of
	strings here and get them from the type system.

2005-05-22  Sven Neumann  <sven@gimp.org>

	* tools/gimp-mkenums (parse_trigraph): use quotewords() from
	Text::ParseWords to split the trigraph. This function correctly
	deals with commas inside quotes.

	* app/core/core-enums.[ch]: tweaked descriptions in the
	GimpDashPreset enum.

2005-05-22  Sven Neumann  <sven@gimp.org>

	* app/core/gimpdashpattern.c: minor cleanup.

	* app/widgets/gimpcellrendererdashes.c: don't draw a background,
	draw the dash pattern twice, use the correct widget state.

2005-05-21  Manish Singh  <yosh@gimp.org>

	* plug-ins/metadata/metadata.c (run): don't do pointer arithmetic
	with void *. Fixes bug #305005.

2005-05-22  Michael Natterer  <mitch@gimp.org>

	* tools/test-clipboard.c: added --selection-type option which
	allows operating on any of PRIMARY, SECONDARY and CLIPBOARD.

2005-05-21  Sven Neumann  <sven@gimp.org>

	* app/core/gimpdashpattern.[ch]: added utility functions to copy
	and to free a dash pattern.

	* app/widgets/Makefile.am
	* app/widgets/widgets-types.h 
	* app/widgets/gimpcellrendererdashes.[ch]: added a simple cell
	renderer to visualize a dash pattern.

	* app/widgets/gimpstrokeeditor.c: show previews of the dash
	presets in the combo-box.

2005-05-21  Michael Natterer  <mitch@gimp.org>

	* tools/test-clipboard.c (main): NULL terminate the options array.

2005-05-21  Sven Neumann  <sven@gimp.org>
